# omarchy-circle-search

./: .gitignore  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  omarchy-circle-search-git.install  omarchy-circle-search-setup.sh
doc/: workflow.md
src/: capture.rs  config.rs  main.rs  overlay.rs  search.rs  theme.rs
