[package]
name = "omarchy-circle-search"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
description = "Circle to Search for Hyprland/Wayland — draw a region and visual search it"
authors = ["Charlie Lambart <charlielambart@gmail.com>"]
license = "MIT"
repository = "https://github.com/Lambchwrlie95/omarchy-circle-search"
homepage = "https://github.com/Lambchwrlie95/omarchy-circle-search"
keywords = ["wayland", "hyprland", "search", "screenshot", "omarchy"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs-next = "2"
gtk4 = "0.11"
cairo-rs = { version = "0.22", features = ["png", "use_glib"] }
gtk4-layer-shell = { version = "0.8", features = ["v1_3"] }
